RANGER-2203: Review and update database schema for ranger policies to minimize database queries/updates
Change-Id: If8e560bbdc5e96473501b9cab6a2abd9303cbd7e